--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
       </div>
 
 
-</script>
+<script data-ad-client="ca-pub-1371239104409713" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
