--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <!-- Team Details-->
               <div class="single_advisor_details_info">
                 <h6>Arnab Chatterjee</h6>
-                <p class="designation">Edior</p>
+                <p class="designation">Editor</p>
               </div>
             </div>
           </div>
