--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <!-- Team Thumb-->
               <div class="advisor_thumb"><img src="ujjal.jpg" alt="">
                 <!-- Social Info-->
-                <div class="social-info"><a href="https://www.facebook.com/ujjal.bhattacharya.944"><i class="fa fa-facebook"></i><a href="https://www.instagram.com/me_ujjal_official_11/"><i class="fa fa-instagram " ></i></a><a href="https://wa.me/+919641768354/?text=Hi%2C%20I%20am%20UJJAL%20BHATTACHARYA"><i class="fa fa-whatsapp " ></i></a></div>
+                <div class="social-info"><a href="https://www.facebook.com/ujjal.bhattacharya.944"><i class="fa fa-facebook"></i><a href="https://www.instagram.com/me_ujjal_official_11/"><i class="fa fa-instagram " ></i></a><a href="https://wa.me/+918250119015/?text=Hello%2C%20UJJAL%20Bhattacharya"><i class="fa fa-whatsapp " ></i></a></div>
               </div>
               <!-- Team Details-->
               <div class="single_advisor_details_info">
